<resources>
    <string name="app_name">Music Shop</string>
    <string name="sale_text">Sale -30%</string>
    <string name="select_item_text">Select item</string>
    <string name="order_price_name">Order Price</string>
    <string name="quantity_text">Quantity</string>
    <string name="price_in_dollar">0</string>
    <string name="quantity_item">0</string>
    <string name="your_name_text">Your Name</string>
</resources>
